prøver å fjerne linje for å se om det fungerer, må også endre den linjen uansett

--- a/oppgaver.html
+++ b/oppgaver.html
@@ -246,7 +246,7 @@
         (p) => p.name !== pokemon.name
     );
 
-        mySavedCards.splice(index, 1);
+      //  mySavedCards.splice(index, 1);
         localStorage.setItem("mySavedCards", JSON.stringify(mySavedCards));
         localStorage.setItem("addPokemonCardSaved",JSON.stringify(addPokemonCardSaved) );
         showAllPokemon(pokemonImageNameTypeOnly);
