--- a/battle.html
+++ b/battle.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <script>
-
+          async function fetchBattlePokemon(name) {
+        const pokemonRequest = await fetch(
+          `https://pokeapi.co/api/v2/pokemon/${name}/`
+        );
+        let response = await pokemonRequest.json();
+        return response;
+      }
     </script>
 </body>
 </html>
