la også til bilde i html dok og fikset det så den har riktig referanse og la til bilde i assets, endret title

--- a/battle.html
+++ b/battle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokemon Battle</title>
 </head>
 <body>
     <img src="/assets/pokemonBall.jpg" id="squirtle" alt="pokemonBall" width="120px" height=""/>
@@ -75,11 +75,11 @@
 
 
         squirtle.addEventListener("click", () => {
-           // squirtle.src = "/oppgave2.html/asssets/open.jpg";
+           squirtle.src = "/assets/open.jpg";
             fetchAndShowPokemon("squirtle")
         });
         vulpix.addEventListener("click", () => {
-           // vulpix.src = "/oppgave2.html/asssets/open.jpg";
+           vulpix.src = "/assets/open.jpg";
             fetchAndShowPokemon("vulpix")
         });
 
