starter på txt som skal bli oppdatert med info, siden jeg vil at stat kortet ikke skal endres på

--- a/battle.html
+++ b/battle.html
@@ -6,6 +6,13 @@
     <title>Pokemon Battle</title>
 </head>
 <body>
+    <div class="info-container">
+        <div class="txt-container">
+            <p>Squirtle</p>
+        </div>
+        <div class="txt-container"></div>
+        <div class="txt-container"></div>
+    </div>
     <img src="/assets/pokemonBall.jpg" id="squirtle" alt="pokemonBall" width="120px" height=""/>
     <img src="/assets/pokemonBall.jpg" id="vulpix" alt="pokemonBall" width="120px" height=""/>
     <div class="pokemon-container"></div>
