fyller inn resten, og legger til hp, så den kan bli oppdatert under spillet, samt level og penger, som jeg vil ha med

--- a/battle.html
+++ b/battle.html
@@ -9,9 +9,21 @@
     <div class="info-container">
         <div class="txt-container">
             <p>Squirtle</p>
+            <p id="squirtle-hp-txt"></p>
+            <p id="squirtle-level-txt"></p>
+            <p id="squirtle-money-txt"></p>
         </div>
-        <div class="txt-container"></div>
-        <div class="txt-container"></div>
+        <div class="txt-container">
+            <p>Vulpix</p>
+            <p id="vulpix-hp-txt"></p>
+        <p id="vulpix-level-txt"></p>
+        <p id="vulpix-money-txt"></p>
+        </div>
+        
+        <div class="txt-container">
+            <p>Pikachu</p>
+            <p id="pikachu-hp-txt"></p>
+        </div>
     </div>
     <img src="/assets/pokemonBall.jpg" id="squirtle" alt="pokemonBall" width="120px" height=""/>
     <img src="/assets/pokemonBall.jpg" id="vulpix" alt="pokemonBall" width="120px" height=""/>
