fikset styling så div ser bedre ut

--- a/battle.html
+++ b/battle.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Battle</title>
+    <style>
+        .info-container {
+            display:flex;
+            align-items: baseline;
+            gap: 50px;
+        }
+    </style>
 </head>
 <body>
     <div class="info-container">
