legger til level og penger til pikacu, kan hende at jeg fjerner det etterhvert

--- a/battle.html
+++ b/battle.html
@@ -30,6 +30,8 @@
       <div class="txt-container">
         <p>Pikachu</p>
         <p id="pikachu-hp-txt">35 / 35 Level</p>
+        <p id="pikachu-level-txt">0 / 20 Level</p>
+        <p id="pikachu-money-txt">0 Penger</p>
       </div>
     </div>
     <img
