henter inn info med queryselector

--- a/battle.html
+++ b/battle.html
@@ -54,6 +54,15 @@
       let squirtleHpTxt = document.querySelector("#squirtle-hp-txt");
       let vulpixHpTxt = document.querySelector("#vulpix-hp-txt");
       let pikachuHpTxt = document.querySelector("#pikachu-hp-txt");
+
+      let squirtleLevelTxt = document.querySelector("#squirtle-level-txt");
+      let vulpixLevelTxt = document.querySelector("#vulpix-level-txt");
+      let pikachuLevelTxt = document.querySelector("#pikachu-level-txt");
+
+      let squirtleMoneyTxt = document.querySelector("#squirtle-money-txt");
+      let vulpixMoneyTxt = document.querySelector("#vulpix-money-txt");
+      let pikachuMoneyTxt = document.querySelector("#pikachu-money-txt");
+
       const squirtle = document.querySelector("#squirtle");
       const vulpix = document.querySelector("#vulpix");
       const pokemonContainer = document.querySelector(".pokemon-container");
