legger til level og money i arrat pokemonGood

--- a/battle.html
+++ b/battle.html
@@ -93,6 +93,8 @@
             specialAttack: pokemon.stats[3].base_stat,
             specialDefense: pokemon.stats[4].base_stat,
             speed: pokemon.stats[5].base_stat,
+            level: 0,
+            money: 0,
           }));
           console.log("hvor mange", pokemonGood);
           showPokemon(pokemonGood);
