så at pikachu endret posisjon når trykket på pokemonball, la derfor til position fixed

--- a/battle.html
+++ b/battle.html
@@ -165,6 +165,7 @@
           badGuyContainer.style.display = "flex";
           badGuyContainer.style.flexWrap = "wrap";
           badGuyContainer.style.gap = "10px";
+          pokemonContainer.style.position = "fixed";
           pokemonBadCard.style.background =
             pokemon.type == "water"
               ? "#1451E3"
