--- a/battle.html
+++ b/battle.html
@@ -159,7 +159,7 @@
           pokemonCard.style.padding = "10px";
           pokemonCard.innerHTML = `<img src="${pokemon.image}" style="width: 200px" />
       <h3>Navn: ${pokemon.name} <br>Type: ${pokemon.type}</h3> <h4>STATS<br>HP: ${pokemon.hp}<br>Attack: ${pokemon.attack}<br>Defense: ${pokemon.defense}<br>Special attack: ${pokemon.specialAttack}<br> Special defense: ${pokemon.specialDefense}<br> Speed: ${pokemon.speed}</h4>`;
-          pokemonCard.appendchild(pickMeBtn);
+          pokemonCard.append(pickMeBtn);
           pokemonContainer.appendChild(pokemonCard);
         });
       }
