gir bakgrunndfarge, basert på type

--- a/battle.html
+++ b/battle.html
@@ -183,13 +183,10 @@
           badGuyContainer.style.gap = "10px";
          // pokemonBadCard.style.position = "fixed";
           pokemonBadCard.style.background =
-            pokemon.type == "water"
-              ? "#1451E3"
-              : pokemon.type == "fire"
-              ? "#AA1E21"
+            pokemon.type == "electric"
+              ? "#E2E22A"
               : 
          pokemonBadCard.style.width = "200px";
-         
           pokemonBadCard.style.height = "430px";
           pokemonBadCard.style.padding = "10px";
           pokemonBadCard.innerHTML = `<img src="${pokemon.image}" style="width: 200px" />
