starter på startgame function men tenker at jeg vil ha en knapp, som bruker trykker på for å angripe

--- a/battle.html
+++ b/battle.html
@@ -205,6 +205,10 @@
         vulpix.src = "/assets/open.jpg";
         fetchAndShowPokemon("vulpix");
       });
+
+      function startGame(pokemon) {
+        /// en knapp, kanskje?
+      }
     </script>
   </body>
 </html>
