--- a/battle.html
+++ b/battle.html
@@ -214,14 +214,15 @@
 console.log("jeg ble trykket på", pokemon)
         });
       }*/
+      function attackNow (pokemon){
       document.addEventListener("keydown"), function(event) {
-        if (event.key == "a") {
+        if (event.key == "b") {
           console.log("jeg ble trykket på", pokemon)
         }
-      }
+      }};
       function startGame(pokemon) {
         /// en knapp, kanskje?
-        attackBtn(pokemon);
+        attackNow(pokemon);
       }
     </script>
   </body>
