--- a/battle.html
+++ b/battle.html
@@ -214,14 +214,15 @@
 console.log("jeg ble trykket på", pokemon)
         });
       }*/
-      function attackNow (pokemon){
-      document.addEventListener("keydown"), function(event) {
-        if (event.key == "b") {
+      function attackNow(pokemon){
+      document.addEventListener("keydown", function (event) {
+        if (event.key == "o") {
           console.log("jeg ble trykket på", pokemon)
         }
-      }};
+      })};
       function startGame(pokemon) {
         /// en knapp, kanskje?
+        console.log("start game", pokemon)
         attackNow(pokemon);
       }
     </script>
