--- a/battle.html
+++ b/battle.html
@@ -216,7 +216,7 @@ console.log("jeg ble trykket på", pokemon)
       }*/
       function attackNow(pokemon){
       document.addEventListener("keydown", function (event) {
-        if (event.key == "o") {
+        if (event.key == "a") {
           console.log("jeg ble trykket på", pokemon)
         }
       })};
