fikk ikke til return, chatgpt forslag med {}begge to i den

--- a/battle.html
+++ b/battle.html
@@ -240,8 +240,8 @@ console.log("jeg ble trykket på", pokemon)
 
         let amountOfDamageGoodRound = Math.round(amountOfDamageGood);
         let amoundOfDamageBadRound = Math.round(amountOfDamageBad);
+        return {amoundOfDamageBadRound, amountOfDamageGoodRound};
 
-        
       }
     </script>
   </body>
